Optimize file handling; reformat files